--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,11 +1,28 @@
 header {
-    background: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+  background: white;
+  height: 70px;
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
 }
 header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+  background: url("../images/logo.png") no-repeat;
+  left: 20px;
+  height: 100%;
+}
+
+.available {
+  background-color: #ff545f;
+}
+#api_status {
+  /* background-color: #cccccc ;
+    width: 40px;
+  height: 40px;
+  border-radius: 50%; */
+  float: right;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin: auto 0;
+  margin-right: 30px;
+  background-color: #cccccc;
 }
